--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "a-start-path-finder",
+  "name": "a-star-path-finder",
   "version": "0.1.0",
+  "author": "Imran Azam",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
